--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+  <title>Kulina</title>
 </head>
 <body>
-  
+  <section class="cover">
+
+  </section>
 </body>
 </html>
