--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <title>Kulina</title>
 </head>
 <body>
   <section class="cover">
-
+    <div class="header">
+      <img src="img/Logo.svg" class="logo" alt="">
+      <div class="nav-bar">
+        <a href="#">About Us</a>
+        <a href="#" class="active">Careers</a>
+        <a href="#">Internship</a>
+      </div>
+    </div>
+    <span class="title">Join an Impactful Company</span>
+    <div class="see-more">
+      <a href=""><i class="fas fa-chevron-circle-down"></i></a>
+    </div>
   </section>
 </body>
 </html>
