what we do section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
       <a href=""><i class="fas fa-chevron-circle-down"></i></a>
     </div>
   </section>
+  <section class="content what-we-do">
+    <div class="left">
+      <span>What We Do</span>
+    </div>
+    <div class="right">
+      <p>Kulina's mission is to "serve the best meal with an outstanding costumer experience at the lowest possible price every single day". We want to be customer's default meal option by providing quality product with on-time delivery. We help customers save time and money for each meal they get from us, so they can better spend it on other things that matter.</p>
+      <p>We took pride in being the first food tech startup to join "Google Launchpad Accelerator" in San Francisco, and the only one from Indonesia in winter 2018. Our startup is backed by the same investor who invested in Ele.me (China's unicorn food delivery startup).</p>
+      <p>Join us in our mission to delivering best meals to ten millions of Jakartans. Hurry! Be part of our Kulinas family.</p>
+    </div>
+  </section>
 </body>
 </html>
