web version done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
   <title>Kulina</title>
 </head>
+
 <body>
   <section class="cover">
     <div class="header">
@@ -20,18 +23,202 @@
     </div>
     <span class="title">Join an Impactful Company</span>
     <div class="see-more">
-      <a href=""><i class="fas fa-chevron-circle-down"></i></a>
+      <a href="">
+        <i class="fas fa-chevron-circle-down"></i>
+      </a>
     </div>
   </section>
-  <section class="content what-we-do">
-    <div class="left">
-      <span>What We Do</span>
+  <section class="content">
+    <!-- What We Do Section -->
+    <div class="content-section what-we-do">
+      <div class="left">
+        <span>What We Do</span>
+      </div>
+      <div class="right">
+        <p>Kulina's mission is to "serve the best meal with an outstanding costumer experience at the lowest possible price
+          every single day". We want to be customer's default meal option by providing quality product with on-time delivery.
+          We help customers save time and money for each meal they get from us, so they can better spend it on other things
+          that matter.</p>
+        <p>We took pride in being the first food tech startup to join "Google Launchpad Accelerator" in San Francisco, and the
+          only one from Indonesia in winter 2018. Our startup is backed by the same investor who invested in Ele.me (China's
+          unicorn food delivery startup).</p>
+        <p>Join us in our mission to delivering best meals to ten millions of Jakartans. Hurry! Be part of our Kulinas family.</p>
+      </div>
     </div>
-    <div class="right">
-      <p>Kulina's mission is to "serve the best meal with an outstanding costumer experience at the lowest possible price every single day". We want to be customer's default meal option by providing quality product with on-time delivery. We help customers save time and money for each meal they get from us, so they can better spend it on other things that matter.</p>
-      <p>We took pride in being the first food tech startup to join "Google Launchpad Accelerator" in San Francisco, and the only one from Indonesia in winter 2018. Our startup is backed by the same investor who invested in Ele.me (China's unicorn food delivery startup).</p>
-      <p>Join us in our mission to delivering best meals to ten millions of Jakartans. Hurry! Be part of our Kulinas family.</p>
+    <!-- Explore Opportunities Section -->
+    <div class="content-section explore-opportunities">
+      <div class="left">
+        <span>Explore Opportunities</span>
+      </div>
+      <div class="right">
+        <!-- Start Card List -->
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Frontend Developer
+            </span>
+            <span class="secondary-info">
+              Engineer • Fulltime • Yogyakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Mobile Developer
+            </span>
+            <span class="secondary-info">
+              Engineer • Fulltime • Yogyakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Backend Developer / Senior Backend Developer
+            </span>
+            <span class="secondary-info">
+              Engineer • Fulltime • Yogyakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Data Analyst
+            </span>
+            <span class="secondary-info">
+              Data • Fulltime • Jakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              VP/Director of Logistics
+            </span>
+            <span class="secondary-info">
+              Logistic • Fulltime • Jakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Logistic Manager
+            </span>
+            <span class="secondary-info">
+              Logistic • Fulltime • Jakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Logistic Associate
+            </span>
+            <span class="secondary-info">
+              Logistic • Fulltime • Jakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              VP/Director of Meal Experience
+            </span>
+            <span class="secondary-info">
+              Meal Experience • Fulltime • Jakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              VP/Director of Engineering
+            </span>
+            <span class="secondary-info">
+              Engineer • Fulltime • Yogyakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- New Card -->
+        <div class="card">
+          <div class="card-content">
+            <span class="main-info">
+              Chief Technology Officer
+            </span>
+            <span class="secondary-info">
+              Engineer • Fulltime • Yogyakarta
+            </span>
+          </div>
+          <div class="card-action">
+            <a href="#" class="btn-apply">Apply</a>
+          </div>
+        </div>
+        <!-- End Card List -->
+      </div>
+    </div>
+    <div class="footer">
+      <span>
+        Made with <i class="fas fa-heart" style="color: red"></i> from Indonesia. &copy; Kulina, 2018. All rights reserved.
+      </span>
+      <div class="social-media">
+        Follow kami
+        <a href="#" class="social-media-link">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#" class="social-media-link">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <a href="#" class="social-media-link">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="#" class="social-media-link">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="social-media-link">
+          <i class="fab fa-line"></i>
+        </a>
+      </div>
     </div>
   </section>
 </body>
+
 </html>
