--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </div>
     <span class="title">Join an Impactful Company</span>
     <div class="see-more">
-      <a href="">
+      <a href="#" id="scroll-down">
         <i class="fas fa-chevron-circle-down"></i>
       </a>
     </div>
   </section>
   <section class="content">
     <!-- What We Do Section -->
-    <div class="content-section what-we-do">
+    <div class="content-section what-we-do" id='what-we-do'>
       <div class="left">
         <span>What We Do</span>
       </div>
@@ -219,6 +219,13 @@
       </div>
     </div>
   </section>
+
+  <!-- Script -->
+  <script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
