--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- CSS -->
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <!-- Font Roboto -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,700,900" rel="stylesheet">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
   <title>Kulina</title>
@@ -16,9 +19,10 @@
     <div class="header">
       <img src="img/Logo.svg" class="logo" alt="">
       <div class="nav-bar">
-        <a href="#">About Us</a>
-        <a href="#" class="active">Careers</a>
-        <a href="#">Internship</a>
+        <a href="#" class="link">About Us</a>
+        <a href="#" class="link active">Careers</a>
+        <a href="#" class="link">Internship</a>
+        <a href="#" class="link-mobile"><i class="fas fa-bars"></i></a>
       </div>
     </div>
     <span class="title">Join an Impactful Company</span>
@@ -196,8 +200,11 @@
       </div>
     </div>
     <div class="footer">
-      <span>
+      <span class="for-desktop">
         Made with <i class="fas fa-heart" style="color: red"></i> from Indonesia. &copy; Kulina, 2018. All rights reserved.
+      </span>
+      <span class="for-mobile">
+        Made with <i class="fas fa-heart" style="color: red"></i> from Indonesia. <br/> &copy; Kulina, 2018. All rights reserved.
       </span>
       <div class="social-media">
         Follow kami
